--- a/web/index.html
+++ b/web/index.html
@@ -26,7 +26,7 @@
   <meta name="apple-mobile-web-app-title" content="partner_details">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <title>partner_details</title>
+  <title>Partnerz</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
